update home to show percents
